--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -185,9 +185,9 @@ head
             nav(id='nav' style='z-index:1;display:none;')
               ul(class="pager")
                 li(class='previous')
-                  a( id='login' href="#") Войти
+                  a( id='login' ) Войти
                 li(class='next')
-                  a(href="/register") Регистрация
+                  a(id='regbutton' ) Регистрация
     button(type='button' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:15px;right:15px;border:0px;background-color:transparent;') 
       span(class='glyphicon glyphicon-align-justify ')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
