--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -221,6 +221,10 @@ head
                         break;
                       }
         };
+      function validateEmail(email) { 
+      console.log('checking email');
+      var re = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+      return re.test(email);}
       // AUTHSUBMIT FUNCTION
       var allowauth = 1;
       function authsubmit() {
