--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -336,7 +336,7 @@ head
                   li(class="previous")
                     a(style='background-color:#EFAF4F;' id='moviesubmitbutton') Add
                   li(class="next")
-                    a( class='addmoviebutton' style='background-color:#999;') Close
+                    a( class='addbookbutton' style='background-color:#999;') Close
           .row
             #movieinsert.col-xs-12
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
