--- a/views/adminauth.jade
+++ b/views/adminauth.jade
@@ -24,36 +24,51 @@ head
       font-family:roboto-thin;
       src:url('/bootstrap/fonts/Roboto-Thin.ttf');
       }
-      h2 {
-      font-size:2vw;
-      font-family:roboto-thin;
-      letter-spacing:0.3vw;
-      text-transform:uppercase;
-      color:black;
+      h1{
+        font-family:roboto-thin;
       }
-      h5 {
-      font-size:1vw;
-      font-family:arial;
-      letter-spacing:0.3vw;
-      text-transform:uppercase;
-      color:black;
+      h2{
+        font-family:roboto-thin;
+      }
+      h3{
+        font-family:roboto-thin;
+      }
+      h4{
+        font-family:roboto-thin;
+      }
+      h5{
+        font-family:roboto-thin;
+      }
+      h6{
+        font-family:roboto-thin;
+      }
+      btn {
+        font-family:roboto-thin;
       }
       #header {
       text-align:center;
       margin-top:15vh;
       }
       input{
-      font-family:arial;
-      letter-spacing:1px;
-      font-size:1.5vw;
-      }
-      .col-xs-6 {
-      padding-right:0px;
+      font-family:roboto-thin;
       }
       #message {
       margin-bottom:7vh;
       margin-top:7vh;
       text-align:center;
+      }
+      textarea:hover, 
+      input:hover, 
+      textarea:active, 
+      input:active, 
+      textarea:focus, 
+      input:focus,
+      button:focus,
+      button:active,
+      button:hover
+      {
+          outline:0px !important;
+          -webkit-appearance:none;
       }
   body
     .container
@@ -65,20 +80,13 @@ head
       .row
         .col-xs-6.col-xs-offset-3
           form#entform(role='form', action='/admax', method='post')
-            .row
-              .col-xs-6
-                h5 Логин
-              .col-xs-6
-                input(type='text', name='vlog', style='margin-bottom:1vh;')
-            .row
-              .col-xs-6
-                h5 Пароль
-              .col-xs-6
-                input(type='password', name='vpas')
-            .row(style='text-align: left; margin-top: 2vh;')
-              .col-xs-4(style='padding: 0px; margin: 0px;')
-                button#loginb(type='submit', style='border-radius: 4px; border: 1px solid grey; background-color: transparent; margin-left: 15px;')
-                  h5(style='color: grey; margin: 2vh;')  войти
+            .form-group
+              input(type='text',class='fomr-control', name='vlog', style='margin-bottom:5px;',placeholder='логин')
+            .form-group
+                input(type='password', name='vpas',class='fomr-control',placeholder='пароль',style='margin-bottom:20px;')
+            .row(style='text-align:center;')
+              .col-xs-12
+                button#loginb(type='submit' style='border-radius:30px;' class='btn btn-default') Войти
 
 
       
