--- a/views/adminauth.jade
+++ b/views/adminauth.jade
@@ -81,9 +81,9 @@ head
         .col-xs-6.col-xs-offset-3
           form#entform(role='form', action='/admax', method='post')
             .form-group
-              input(type='text',class='fomr-control', name='vlog', style='margin-bottom:5px;',placeholder='логин')
+              input(type='text',class='form-control', name='vlog', style='margin-bottom:5px;',placeholder='логин')
             .form-group
-                input(type='password', name='vpas',class='fomr-control',placeholder='пароль',style='margin-bottom:20px;')
+              input(type='password', name='vpas',class='form-control',placeholder='пароль',style='margin-bottom:20px;')
             .row(style='text-align:center;')
               .col-xs-12
                 button#loginb(type='submit' style='border-radius:30px;' class='btn btn-default') Войти
