--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -177,8 +177,8 @@ head
         #message.col-xs-12
       .row(style='text-align:center;')
         .col-xs-12
-          input(class='form-control' type='email' style='margin-bottom:5px;' id='mail' name='mail' placeholder='email')
-          input(class='form-control' type='password' style='margin-bottom:5px;' id='p' name='p' placeholder='password')
+          input(class='form-control' type='email' style='margin-bottom:5px;' id='vlgn' name='mail' placeholder='email')
+          input(class='form-control' type='password' style='margin-bottom:5px;' id='vphr' name='p' placeholder='password')
           input(class='form-control' type='password' style='margin-bottom:20px;display:none;' id='pc' name='pc' placeholder='password')
           #wrap(style='width:100%;')
             button(class='btn btn-primary' type='button' id='shownav' style='position:absolute;margin-left:-60;left:50%;z-index:2;border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Log in / Register
