--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -368,7 +368,7 @@ head
           $('#addbook').slideToggle();
          }
          $('#booksrow').fadeOut('400',function(){$('#moviesrow').fadeIn();});
-         $('#maincont').css('background-color','#CA5B52');
+         $('#maincont').css('background-color','#FAB142');
          $('.activebutton').removeClass('activebutton');
          $('#showmovies').addClass('activebutton');
         });
