--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -211,14 +211,14 @@ head
         .col-xs-12
           .row
             .col-xs-12(style='text-align:center;')
-              h1(id='newbooks' style='font-family:high;font-size:100px;font-weight:bold;color:white;padding-right:20px;')
+              h1(id='booksfigures' style='font-family:high;font-size:100px;font-weight:bold;color:white;padding-right:20px;')
           .row
             #bookinsert.col-xs-12
       #moviesrow.row(style='display:none;')
         .col-xs-12
           .row
             .col-xs-12(style='text-align:center;')
-              h1(id='newmovies' style='font-family:high;font-size:100px;font-weight:bold;color:white;padding-right:20px;')
+              h1(id='moviesfigures' style='font-family:high;font-size:100px;font-weight:bold;color:white;padding-right:20px;')
           .row
             #movieinsert.col-xs-12
     footer(class='footer')
