--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -193,6 +193,32 @@ head
       label {
         color:white;
       }
+      .h1 .small,
+       .h1 small,
+       .h2 .small,
+       .h2 small,
+       .h3 .small,
+       .h3 small,
+       .h4 .small,
+       .h4 small,
+       .h5 .small,
+       .h5 small,
+       .h6 .small,
+       .h6 small,
+       h1 .small,
+       h1 small,
+       h2 .small,
+       h2 small,
+       h3 .small,
+       h3 small,
+       h4 .small,
+       h4 small,
+       h5 .small,
+       h5 small,
+       h6 .small,
+       h6 small {
+      color: rgba(245, 245, 245, 0.68);
+      }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       h3(style='text-align:center;') People & Books
