--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -374,6 +374,7 @@ head
          }
          $('#booksrow').fadeOut('400',function(){$('#moviesrow').fadeIn();});
          $('#maincont').css('background-color','#CA5B52');
+         $('.modpanel').css('display','none');
          $('.activebutton').removeClass('activebutton');
          $('#showmovies').addClass('activebutton');
         });
@@ -384,6 +385,7 @@ head
          }
          $('#moviesrow').fadeOut('400',function(){$('#booksrow').fadeIn();});
          $('#maincont').css('background-color','#52CA8F');
+         $('.modpanel').css('display','none');
          $('.activebutton').removeClass('activebutton');
          $('#showbooks').addClass('activebutton');
         });
