--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -409,6 +409,7 @@ head
          }
          $('#booksrow').fadeOut('400',function(){$('#moviesrow').fadeIn();});
          $('#maincont').css('background-color','#FAB142');
+         $('.modpanel').css('display','none');
          $('.activebutton').removeClass('activebutton');
          $('#showmovies').addClass('activebutton');
         });
@@ -419,6 +420,7 @@ head
          }
          $('#moviesrow').fadeOut('400',function(){$('#booksrow').fadeIn();});
          $('#maincont').css('background-color','#52CA8F');
+         $('.modpanel').css('display','none');
          $('.activebutton').removeClass('activebutton');
          $('#showbooks').addClass('activebutton');
         });
