--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -350,7 +350,7 @@ head
                        }
                        popinsert+="</h3></div></div><div class='row modpanel' id='modbook"+element.bid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
                        if(element.newbook){
-                        popinsert+="<button class='btn btn-primary' onclick='modify(0,"+element.bid+")' type='button'>Прочитана</button>";
+                        popinsert+="<button id='readbutton"+element.bid+"' class='btn btn-primary' onclick='modify(0,"+element.bid+")' type='button'>Прочитана</button>";
                        }
                        popinsert+="<button class='btn btn-danger' onclick='modify(1,"+element.bid+")' type='button'>Удалить</button></div</div>";
                        $('#bookinsert').prepend(popinsert);
@@ -372,7 +372,7 @@ head
                        }
                        popinsert+="</h3></div></div><div class='row modpanel' id='modmovie"+element.mid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
                        if(element.newmovie){
-                        popinsert+="<button class='btn btn-primary' onclick='modifymovie(0,"+element.mid+")' type='button'>Просмотрен</button>";
+                        popinsert+="<button class='btn btn-primary' id='watchbutton"+element.mid+"' onclick='modifymovie(0,"+element.mid+")' type='button'>Просмотрен</button>";
                        }
                        popinsert+="<button class='btn btn-danger' onclick='modifymovie(1,"+element.mid+")' type='button'>Удалить</button></div</div>";
                        $('#movieinsert').prepend(popinsert);
