--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -341,7 +341,7 @@ head
                        {
                         popbookclass='alreadyb';
                        }
-                       var popinsert = "<div class='row ' style='padding-right:20px;' onclick='openmodpanel("+element.bid+")' id='book"+element.bid+"'><div class='col-xs-12'><h3 class='"+popbookclass+"'>"+element.booktitle+" <small> "+element.author+" </small>";
+                       var popinsert = "<div class='row ' style='padding-right:20px;' onclick='openmodpanel("+element.bid+")' id='book"+element.bid+"'><div class='col-xs-12'><h3 id='heading"+element.bid+"' class='"+popbookclass+"'>"+element.booktitle+" <small> "+element.author+" </small>";
                        if(element.star===1&&element.newbook===0){
                          popinsert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
                        }
@@ -363,7 +363,7 @@ head
                        {
                         popmovieclass='alreadym';
                        }
-                       var popinsert = "<div class='row ' style='padding-right:20px;' onclick='openmodmoviepanel("+element.mid+")' id='movie"+element.mid+"'><div class='col-xs-12'><h3 class='"+popmovieclass+"'>"+element.movietitle+" <small> "+element.year+" </small>";
+                       var popinsert = "<div class='row ' style='padding-right:20px;' onclick='openmodmoviepanel("+element.mid+")' id='movie"+element.mid+"'><div class='col-xs-12'><h3 id='movieheading"+element.mid+"' class='"+popmovieclass+"'>"+element.movietitle+" <small> "+element.year+" </small>";
                        if(element.star===1&&element.newmovie===0){
                          popinsert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
                        }
@@ -723,7 +723,7 @@ head
           if (eval("$('#modmovie"+mid+"').css('display')") === 'block' )
          {eval("$('#modmovie"+mid+"').slideToggle();");}
            eval("$('#watchbutton"+mid+"').remove();");
-           eval("$('#heading"+mid+"').removeClass('yet').addClass('alreadym');");
+           eval("$('#movieheading"+mid+"').removeClass('yet').addClass('alreadym');");
            newmovies--;
            seenmovies++;
          $('#moviesfigures').empty().append(" "+newmovies+" <span class='alreadym'> | "+seenmovies+"</span>");
