--- a/views/userlist.jade
+++ b/views/userlist.jade
@@ -100,7 +100,7 @@ head
           form(class="form-inline" method='post' action='/drop/users' role='form')
             .form-group
               input(type="text" class="form-control" name='p' placeholder="Password")
-            button(type="submit" class="btn btn-danger") Drop
+            button(type="submit" style='margin-left:20px;border-radius:4px;' class="btn btn-danger") Drop
       .row
         .col-xs-12
           .panel.panel-default
